--- a/4-doc-doc-testing-load-testing/workshop/docker-compose.yml
+++ b/4-doc-doc-testing-load-testing/workshop/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   web:
     image: "docker-node-mongo-todo-app"
@@ -8,7 +8,14 @@ services:
       - "5000:5000"
     depends_on:
       - "mongo"
+    networks:
+      - "project"
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
   mongo:
-    image: "mongo"
+    image: "mongo:4.4.6"
     ports:
       - "27017:27017"
+    networks:
+      - "project"
